# elevate_ai

app/: .gitignore  README.md  main.py  pyproject.toml
app/backend/: app.py  chromastore.py  contacts_store.py  docstore.py  memory.py  taskstore.py  tools.py  topic_extractor.py
app/backend/helper/: chromadb_helper.py
app/backend/scripts/: seed_and_query_chroma.py
app/documents/customers/: customers.md
app/documents/development/: setup-environment-angular.md
app/documents/helpdesk/: support_it_helpdesk.md
app/documents/people/: people.md
app/documents/specifications/: onboarding-user-stories.md
app/documents/support/: it-helpdesk.md
app/documents/tasks/: pending-tasks.md
app/frontend/: gradio_app.py  streamlit_app.py
app2/: .env  requirements.txt
app2/backend/: app.py  embedder.py  merge_template.py
app2/frontend/: app.py  conversation_history.json
kb/: 01_company_policies_and_kb.md  02_employee_profiles_seed.md  03_access_requests_and_tasks.md  04_test_cases_and_edge_inputs.md
slide/: Employee-Onboarding-Assistant.pptx  gammaLink.txt
